RM-8327 Fix DropDownMenuOptions width when aligned left

--- a/Remotion/Web/Core/Res/Themes/NovaViso/HTML/DropDownMenu.css
+++ b/Remotion/Web/Core/Res/Themes/NovaViso/HTML/DropDownMenu.css
@@ -225,6 +225,8 @@ ul.DropDownMenuOptions li a > span:last-of-type
   grid-area: span;
   align-self: center;
   padding-left: var(--remotion-themed-spacing);
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 ul.DropDownMenuOptions li.selected a:hover:not(li.DropDownMenuItemDisabled a),
